--- a/tmux.conf
+++ b/tmux.conf
@@ -4,3 +4,8 @@ set-option -g prefix C-a
 
 bind-key C-a send-prefix
 
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
