--- a/tmux.conf
+++ b/tmux.conf
@@ -3,9 +3,11 @@ unbind-key C-b
 set-option -g prefix C-a
 
 bind-key C-a send-prefix
+bind-key k send-keys C-l \; clear-history
 
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 
